--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,28 @@
 #********** OLLAMA CONFIG **********#
 spring.ai.ollama.base-url=http://localhost:11434/
 spring.ai.ollama.init.pull-model-strategy=never
-spring.ai.ollama.chat.options.model=llama3.2
-#spring.ai.ollama.chat.options.temperature=0.3
+#spring.ai.ollama.chat.options.model=vicuna
+
+#spring.ai.ollama.chat.options.model=Vedu/QRX3
+#spring.ai.ollama.chat.options.temperature=0.7
 #spring.ai.ollama.base-url=http://192.168.12.34:11434/
 
-#spring.ai.ollama.chat.options.model=llama3.3
+spring.ai.ollama.chat.options.model=llama3.2
+#spring.ai.ollama.chat.options.model=mxbai-embed-large
 #spring.ai.ollama.chat.options.model=mistral
+
+
+#********** MONGODB CONFIG **********#
+spring.data.mongodb.uri=mongodb://localhost:27017/?directConnection=true
+spring.data.mongodb.database= ppe
+spring.ai.vectorstore.mongodb.collection-name= vector_store
+spring.ai.vectorstore.mongodb.initialize-schema=true
+spring.ai.vectorstore.mongodb.path-name= embedding
+spring.ai.vectorstore.mongodb.indexName=vector_index
+spring.ai.vectorstore.mongodb.indexType=faiss
+spring.ai.vectorstore.mongodb.indexDimension=768
+spring.ai.vectorstore.mongodb.indexMetric=inner_product
+spring.ai.vectorstore.mongodb.indexNprobe=10
+spring.ai.vectorstore.mongodb.indexNlist=100
+spring.ai.vectorstore.mongodb.indexM=8
+spring.ai.vectorstore.mongodb.indexNbits=8
