--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,11 @@ spring.ai.ollama.init.pull-model-strategy=never
 #spring.ai.ollama.chat.options.model=vicuna
 
 #spring.ai.ollama.chat.options.model=Vedu/QRX3
-#spring.ai.ollama.chat.options.temperature=0.7
+spring.ai.ollama.chat.options.temperature=0.7
 #spring.ai.ollama.base-url=http://192.168.12.34:11434/
 
 spring.ai.ollama.chat.options.model=llama3.2
+#spring.ai.ollama.chat.options.model=phi4
 #spring.ai.ollama.chat.options.model=mxbai-embed-large
 #spring.ai.ollama.chat.options.model=mistral
 
